# AgileLB

./: .gitignore  CMakeLists.txt  Dockerfile  Readme.md  lb.yml  main.py  performance.md  pyproject.toml  requirements.txt  test_server.py
LB/: app.cpp  app.py  main.cpp  selector.py  unix.cpp  utils.cpp  win.cpp
LB/include/: app.h  compiler.hpp  config.h  server.h  utils.h  utils.hpp
LB/views/: manager.py
