[tool.poetry]
name = "agilelb"
version = "1.0.0"
description = "性能卓越，操作简便的负载均衡器，轻松提升应用响应速度。"
authors = ["moyan <1561515308@qq.com>"]
license = "LGPL 2.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sanic = "24.6.0"
aiohttp = "3.9.5"
aiodns = "3.2.0"
pyyaml = "6.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
